# ControlMouse

./: README.md
client/: pom.xml
client/src/main/java/com/example/client/config/: Config.java  LogConfig.java  WebSocketConfig.java
client/src/main/java/com/example/client/controller/: ConfigController.java  ControlController.java  LogController.java
client/src/main/java/com/example/client/entity/: MousePosition.java
client/src/main/java/com/example/client/repository/: MousePositionRepository.java
client/src/main/java/com/example/client/request/: MousePositionRequest.java
client/src/main/java/com/example/client/service/: ConfigService.java  ControlService.java  LogService.java  MouseService.java  WebSocketClientService.java
client/src/main/resources/: application.properties
server/: pom.xml
server/src/main/cpp/: CMakeLists.txt
server/src/main/cpp/headers/: vm.h
server/src/main/cpp/src/: main.cpp  vm.cpp
server/src/main/java/com/example/server/: MouseStartRequest.java
server/src/main/java/com/example/server/config/: Config.java  CustomWebSocketServer.java  WebSocketConfig.java
server/src/main/java/com/example/server/controller/: ConfigController.java  ControlController.java
server/src/main/java/com/example/server/service/: ConfigService.java  ControlService.java  CustomWebSocketHandler.java  MouseService.java  WebSocketServerManager.java  WebSocketServerService.java
server/src/main/resources/: application.properties
server/src/test/java/com/example/server/service/: MouseServiceTests.java
